# ofcrse

./: .dockerignore  .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  README.md  astro.config.mjs  flake.nix  fly.toml  index.html  nginx.conf  package-lock.json  package.json
.github/workflows/: build.yml  deploy.yml
scripts/: generate-iosevka-font.sh  generate-og-image.js  private-build-plans.toml  subset-font.sh
server/: Cargo.toml
server/src/: error.rs  main.rs
site/: astro.config.mjs  package-lock.json  package.json
site/pages/: index.astro
site/src/components/: Head.astro  Scripts.astro  TableOfContentsHeading.astro
site/src/components/icons/: EmailIcon.astro  TwitterIcon.astro
site/src/content/articles/: jujutsu-merge-workflow.md
site/src/layouts/: ArticleLayout.astro
site/src/pages/: 404.astro  about.astro  index.astro  style-guide.md  writing.astro
site/src/pages/images/cover/: default.png.ts
site/src/styles/: global.css
site/src/utils/: renderPng.ts
src/: consts.ts  error.rs  main.rs
src/components/: Date.astro  Head.astro  Navigation.astro  Scripts.astro  TableOfContents.astro
src/components/icons/: GitHubIcon.astro
src/content/: config.ts
src/content/articles/: jujutsu-merge-workflow.md  postgres-rls.md
src/layouts/: ArticleLayout.astro  DefaultLayout.astro
src/pages/: 404.astro  500.astro  [...slug].astro  about.astro  index.astro  rss.xml.ts  writing.astro
src/pages/images/cover/: [...slug].png.ts
src/styles/: fonts.css  global.css
src/utils/: getArticles.ts
