[package]
name = "ofcrse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", features = ["macros"] }
color-eyre = "0.6.2"
html-escape = "0.2.13"
hyper = { version = "1.0", features = ["full"] }
hyper-rustls = { version = "0.26", features = ["webpki-roots"] }
hyper-util = { version = "0.1", features = ["client-legacy"] }
serde_json = "1.0"
tokio = { version = "1.34", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "normalize-path", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
